<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/top_rounded_corner"
        android:gravity="center"
        android:text="@string/choose_action"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/teal_200"/>

    <TextView
        android:id="@+id/info_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal"
        android:background="@color/white"
        android:padding="16dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:text="@string/info_text"
        android:gravity="center">

    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="16dp"
        android:paddingBottom="4dp"
        android:background="@drawable/bottom_corners">

        <Button
            android:id="@+id/accept_dialog_btn"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/accept"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:background="@color/white"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>