<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:id="@+id/layout"
    android:layout_height="match_parent"
    android:weightSum="10"
    android:orientation="vertical"
    android:elevation="10dp"
    android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/top_rounded_corner"
        android:gravity="center"
        android:text="@string/capture_photo"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/teal_200"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7">

        <SurfaceView
            android:id="@+id/surfaceViews"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/teal_200"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:background="@drawable/bottom_corners">

        <Button
            android:id="@+id/close_image_btn"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_weight="1"
            android:background="@drawable/bottom_left_corner"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            android:layout_marginRight="4dp" />

        <Button
            android:id="@+id/capture_image_btn"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_weight="1"
            android:layout_marginLeft="4dp"
            android:background="@drawable/bottom_right_corner"
            android:text="@string/capture"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>