<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/top_rounded_corner"
        android:gravity="center"
        android:text="@string/choose_action"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/teal_200"/>

        <LinearLayout
            android:id="@+id/clean_not_clean_chooser_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:orientation="horizontal"
            android:background="@color/white"
            android:paddingTop="16dp"
            android:gravity="center">

                <LinearLayout
                    android:id="@+id/not_clean"
                    android:layout_width="105dp"
                    android:layout_height="105dp"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:padding="8dp"
                    android:layout_marginRight="27.5dp"
                    android:background="@drawable/teal_background_with_corner" >

                    <ImageView
                        android:layout_width="65dp"
                        android:layout_height="65dp"
                        android:textColor="@color/white"
                        android:src="@drawable/clean_icon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:textSize="14sp"
                        android:text="@string/clean"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/clean"
                    android:layout_width="105dp"
                    android:layout_height="105dp"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:padding="8dp"
                    android:layout_marginLeft="27.5dp"
                    android:background="@drawable/teal_background_with_corner" >

                    <ImageView
                        android:layout_width="65dp"
                        android:layout_height="65dp"
                        android:textColor="@color/white"
                        android:src="@drawable/not_clean_icon"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:textSize="14sp"
                        android:text="@string/not_clean"/>

                </LinearLayout>

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="16dp"
        android:paddingBottom="4dp"
        android:background="@drawable/bottom_corners">

        <Button
            android:id="@+id/close_dialog"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:background="@color/white"
            android:textSize="16sp" />

    </LinearLayout>


</LinearLayout>