<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity"
    android:gravity="center"
    android:weightSum="3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:src="@drawable/login_app_icon"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="#000"
            android:textStyle="bold"
            android:textSize="16sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="20dp"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:id="@+id/google_sign_btn"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/sign_in_btn_shape"
            android:onClick="googleSignInBtn"
            android:text="@string/sign_in_btn_text"
            android:textAllCaps="false"
            android:textColor="@color/splash_bg"
            android:textSize="16sp"
            android:textStyle="bold" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/please_wait_anim"
            android:layout_width="80dp"
            android:layout_height="80dp"
            app:lottie_autoPlay="true"
            app:lottie_fileName="progress_bar.json"
            app:lottie_loop="true"
            app:lottie_speed="1.25"
            android:visibility="invisible"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:weightSum="2">

        <TextView
            android:id="@+id/loginMessage"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/login_message"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@color/teal_700"
            tools:ignore="NestedWeights" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/login_bottom_shape" />

    </LinearLayout>


</LinearLayout>