<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:weightSum="3">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:titleTextColor="#fff">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:textColor="#fff"
            android:textSize="@dimen/header_font_size" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">


        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/dustbin_image"
            android:padding="16dp"/>

        <Button
            android:id="@+id/capture_wastebin_image_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/capture_waste_image"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:background="@drawable/bottom_left_corner"
            android:paddingRight="32dp"
            android:paddingLeft="32dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/teal_200"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp" />

    <TextView
        android:id="@+id/helpline_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:textSize="22sp"
        android:gravity="center"
        android:textColor="#333333" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:gravity="center|top"
        android:textColor="#707070"
        android:paddingRight="8dp"
        android:paddingLeft="8dp"
        android:paddingBottom="8dp"
        android:text="@string/helpline_number"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:gravity="bottom">

        <ListView
            android:id="@+id/parent_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@null"
            android:scrollbars="none"/>

    </LinearLayout>

</LinearLayout>