<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="10dp">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/top_rounded_corner"
        android:gravity="center"
        android:text="@string/select_language"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/teal_200"/>

    <LinearLayout
        android:id="@+id/clean_not_clean_chooser_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="16dp"
        android:weightSum="2">


        <LinearLayout
            android:id="@+id/hindi_lang"
            android:layout_width="105dp"
            android:layout_height="105dp"
            android:layout_marginRight="27.5dp"
            android:background="@drawable/teal_background_with_corner"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="8dp">

            <ImageView
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:src="@drawable/hindi_icon"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/hindi"
                android:textSize="14sp" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/english_lang"
            android:layout_width="105dp"
            android:layout_height="105dp"
            android:layout_marginLeft="27.5dp"
            android:background="@drawable/teal_background_with_corner"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="8dp">

            <ImageView
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:src="@drawable/english_icon"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="English"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="16dp"
        android:paddingBottom="4dp"
        android:background="@drawable/bottom_corners">

        <Button
            android:id="@+id/close_dialog"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:background="@color/white"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>